[package]
name = "noise"
version = "0.1.0"
authors = ["Dan Slocombe <ds4314@ic.ac.uk>"]

[[bin]]
name = "noise"

[dependencies]
rand = "0.3"
piston = "0.31.3"
piston_window = "0.64.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = { git = "https://github.com/danslocombe/opengl_graphics" }
gl = "0.6.0"
bitflags = "0.7.0"
rayon = "0.6.0"
insertion-sort = "0.1.0"
rustc-serialize = "0.3.22"
clippy = {version = "*", optional = true}
find_folder = "*"

[features]
default = []
