[package]
name = "noise"
version = "0.1.0"
authors = ["Dan Slocombe <ds4314@ic.ac.uk>"]

[[bin]]
name = "noise"

[dependencies]
rand = "0.3"
piston = "0.31"
piston_window = "0.64"
piston2d-graphics = "0.21"
pistoncore-glutin_window = "0.35"
piston2d-opengl_graphics = { git = "https://github.com/danslocombe/opengl_graphics" }
gl = "0.6"
bitflags = "0.7"
rayon = "0.6"
insertion-sort = "0.1"
rustc-serialize = "0.3"
clippy = {version = "*", optional = true}
find_folder = "0.3"
cgmath = "0.12"
ncollide = "0.11"
nalgebra = "0.11"

[features]
default = []
